--- a/Отделочные материалы/index.html
+++ b/Отделочные материалы/index.html
@@ -13,8 +13,7 @@
 </ul> 
 <div class="content">
 	<h1>Общая классификация</h1>
-<img class="contentimage1" src="imgs/nanesenie-faktury-na-shtukaturku-sten.jpg" alt="Нанесение штукатурки">
-Нанесение фактуры на штукатурку стен
+<img class="contentimage1" src="imgs/nanesenie-faktury-na-shtukaturku-sten.jpg">
 Нанесение фактуры на штукатурку стен
 На рынке появляются инновационные отделочные материалы, Не смотря на это, решения, апробированные годами, до сих пор не утратили своей актуальности.
 Рассмотрим критерии для общей классификации этих средств:
